# fuelflux.lcd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  nhd12864_demo  nhd12864_gpio  nhd12864_probe
docs/: LIBRARY.md
include/: four_line_display.h  ft_text.h  gpio_gpiod.h  graphics.h  ili9488.h  spi_linux.h  st7565.h
scripts/: gpio_mapping_notes.md  install.sh  nhd12864.conf
src/: four_line_display.cpp  ft_text.cpp  gpio_gpiod.cpp  graphics.cpp  ili9488.cpp  main_demo.cpp  main_fourline_demo.cpp  main_gpio.cpp  main_probe.cpp  spi_linux.cpp  st7565.cpp
systemd/: nhd12864-demo.service
tests/: test_four_line_display.cpp  test_ft_text.cpp  test_ili9488.cpp
